changes added as per suggestion
