# controllers/weather.js
@@ -20,26 +20,27 @@ const getWeather = async (req, res) => {
         utilityConstants.weatherApi.messages.not_prime_num
       );
     }
-    const apiUrl = `${utilityConstants.weatherApi.weather_api_base_url}`;
-    const response = await superagent
+    const apiUrl = utilityConstants.weatherApi.weather_api_base_url;
+    superagent
       .get(apiUrl)
       .query(
-        `q=${utilityConstants.weatherApi.default_city},${utilityConstants.weatherApi.default_country}&appid=${process.env.WEATHER_API_KEY}`
+        `q=${req.query.city},${req.query.country}&appid=${process.env.WEATHER_API_KEY}`
       )
-      .set("accept", "json");
-    if (response.statusCode === responseCodes.success) {
-      const apiData = {
-        open_weather_api_response: response.body,
-        open_weather_api_request_date: new Date(),
-        app_response_sent_date: new Date(),
-      };
-      await addApiResponse(apiData);
-      return res.status(responseCodes.success).json(response.body);
-    }
-    throw setResponse(
-      responseCodes.bad_request,
-      utilityConstants.weatherApi.messages.api_error
-    );
+      .set("accept", "json")
+      .then(async (response) => {
+        if (response.statusCode === responseCodes.success) {
+          const apiData = {
+            open_weather_api_response: response.body,
+            open_weather_api_request_date: new Date(),
+            app_response_sent_date: new Date(),
+          };
+          await addApiResponse(apiData);
+          return res.status(responseCodes.success).json(response.body);
+        }
+      })
+      .catch((err) => {
+        return res.status(err.response.statusCode).json(err.response.body);
+      });
   } catch (error) {
     errorHandler(res, error);
   }
