# routes/index.js
@@ -1,5 +1,5 @@
 const express = require("express");
-const userRouter = require("./weather");
+const weatherRouter = require("./weather");
 const { commonResponse } = require("../constants/commonConstants");
 const app = express();
 
@@ -8,7 +8,7 @@ app.use((req, res, next) => {
   next();
 });
 // Routes which should handle requests
-app.use("/weather", userRouter);
+app.use("/weather", weatherRouter);
 
 // Error handler for routes
 app.use((req, res) => {
